# optpricing

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.txt  benchmark.py  codecov.yml  config.yaml  dashboard.py  example.py  get_div.py  main.py  mkdocs.yml  next.txt  pyproject.toml  tmp_file_pit.txt
.github/workflows/: ci.yml  publish.yml
artifacts/calibrated_params/: SPY_BSM_2023-01-01.json
atoms/: option.py  rate.py  stock.py
benchmark/: consolidated_report.py  report.py  run_all_benchmarks.py  run_consolidated_benchmarks.py  runner.py
benchmark/configs/: base_config.py  demo_bates.py  demo_blacks_approx.py  demo_bsm.py  demo_cev.py  demo_cgmy.py  demo_dupire.py  demo_heston.py  demo_hyperbolic.py  demo_kou.py  demo_merton_jump.py  demo_nig.py  demo_parity_tools.py  demo_perpetual_put.py  demo_sabr.py  demo_sabr_jump.py  demo_vg.py
calibration/: calibrator.py  fit_market_params.py  iv_surface.py  technique_selector.py
data/: data_manager.py  fetch_bulk_opt.py  historical_data.py  historical_manager.py  save_historical_data.py
data/historical_data/: AAPL_10y_returns.parquet  AMC_10y_returns.parquet  AMD_10y_returns.parquet  AMZN_10y_returns.parquet  BAC_10y_returns.parquet  BA_10y_returns.parquet  CAT_10y_returns.parquet  CVX_10y_returns.parquet  GME_10y_returns.parquet  GOOGL_10y_returns.parquet  GS_10y_returns.parquet  HD_10y_returns.parquet  JNJ_10y_returns.parquet  JPM_10y_returns.parquet  META_10y_returns.parquet  MSFT_10y_returns.parquet  NKE_10y_returns.parquet  NVDA_10y_returns.parquet  PFE_10y_returns.parquet  QQQ_10y_returns.parquet  SPY_10y_returns.parquet  TSLA_10y_returns.parquet  UNH_10y_returns.parquet  WMT_10y_returns.parquet  XOM_10y_returns.parquet
data/market_data_snapshots/: AAPL_2025-06-16.parquet  AAPL_2025-06-17.parquet  AAPL_2025-06-25.parquet  AAPL_2025-06-26.parquet  AAPL_2025-07-02.parquet  AAPL_2025-07-03.parquet  AAPL_2025-07-07.parquet  AAPL_2025-07-08.parquet  AAPL_2025-07-09.parquet  AMC_2025-06-17.parquet  AMC_2025-06-25.parquet  AMC_2025-06-26.parquet  AMC_2025-07-02.parquet  AMC_2025-07-03.parquet  AMC_2025-07-07.parquet  AMC_2025-07-08.parquet  AMC_2025-07-09.parquet  AMD_2025-06-17.parquet  AMD_2025-06-25.parquet  AMD_2025-06-26.parquet  AMD_2025-07-02.parquet  AMD_2025-07-03.parquet  AMD_2025-07-07.parquet  AMD_2025-07-08.parquet  AMD_2025-07-09.parquet  AMZN_2025-06-17.parquet  AMZN_2025-06-25.parquet  AMZN_2025-06-26.parquet  AMZN_2025-07-02.parquet  AMZN_2025-07-03.parquet  AMZN_2025-07-07.parquet  AMZN_2025-07-08.parquet  AMZN_2025-07-09.parquet  BAC_2025-06-17.parquet  BAC_2025-06-25.parquet  BAC_2025-06-26.parquet  BAC_2025-07-02.parquet  BAC_2025-07-03.parquet  BAC_2025-07-07.parquet  BAC_2025-07-08.parquet  (+162 more)
demo/: benchmark.py
demo/configs/: demo_bates.py  demo_dupire.py  demo_hyperbolic.py  demo_vg.py
devtools/: clean_cache.py
docs/: index.md
docs/guide/: dashboard.md  examples.md  getting_started.md  installation.md  introduction.md
docs/reference/: cli.md
examples/: demo_american.py  european_options_benchmark.py
historical_data/: AAPL_10y_returns.parquet  GOOGL_10y_returns.parquet  META_10y_returns.parquet  SPY_10y_returns.parquet  SPY_5y_returns.parquet  TSLA_10y_returns.parquet
market_data_snapshots/: GOOGL_2025-06-16.parquet  SPY_2025-06-16.parquet  TSLA_2025-06-16.parquet
models/: bates.py  blacks_approx.py  bsm.py  cev.py  cgmy.py  dupire_local.py  heston.py  hyperbolic.py  kou.py  merton_jump.py  nig.py  perpetual_put.py  sabr.py  sabr_jump.py  vg.py
models/base/: base_model.py  validators.py
parity/: implied_rate.py  parity_model.py
plotting/: run_visualization.py  smile_plotter.py
scripts/: app.py  clean_cache.py  download_historical_data.py  run_backtest.py  run_calib.py  run_informal_test.py
scripts/devtools/: run_informal_test.py
scripts/pages/: 1_Calibration.py  2_Pricer_and_Greeks.py  3_Financial_Tools.py
src/optpricing/: __init__.py  cli.py  config.py
src/quantfin/: __init__.py  cli.py  config.py
techniques/: bsm_iv_solver.py  closed_form.py  crr.py  fft.py  integration.py  leisen_reimer.py  lewis_fft.py  monte_carlo.py  pde.py  topm.py
techniques/base/: base_technique.py  greek_mixin.py  iv_mixin.py  random_utils.py
tests/: test_cli.py
tests/atoms/: test_bond.py  test_option.py  test_rate.py  test_stock.py
tests/calibration/: test_calibrator.py  test_fit_jump_parameters.py  test_fit_market_params.py  test_iv_surface.py  test_technique_selector.py  test_vectorized_bsm_iv.py  test_vectorized_integration_iv.py
tests/dashboard/: test_plots.py  test_service.py
tests/data/: test_historical_manager.py  test_market_data_manager.py
tests/models/: test_bates.py  test_blacks_approx.py  test_bsm.py  test_cev.py  test_cgmy.py  test_cir.py  test_dupire_local.py  test_heston.py  test_hyperbolic.py  test_kou.py  test_merton_jump.py  test_nig.py  test_perpetual_put.py  test_sabr.py  test_sabr_jump.py  test_vasicek.py  test_vg.py
tests/parity/: test_implied_rate.py  test_parity_model.py
tests/techniques/: test_closed_form.py  test_crr.py  test_fft.py  test_integration.py  test_leisen_reimer.py  test_monte_carlo.py  test_pde.py  test_topm.py
tests/workflows/: test_backtest_workflow.py  test_daily_workflow.py
workflows/: backtest_workflow.py  daily_workflow.py  run_backtest.py  run_calib.py
workflows/configs/: bsm_config.py  (+5 more)
(+216 files in other folders)
