[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfin"
version = "2.0.0"
authors = [
  { name="Diljit Singh", email="first_last22@google.com" },
]
description = "A financial options pricing and analysis library."
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial Industry",
    "Topic :: Math :: Financial",
]

dependencies = [
    "numpy==2.2.5",
    "scipy==1.15.2",
    "pandas==2.2.3",
    "numba",
    "pyyaml",
]

[project.optional-dependencies]
app = [
    "streamlit==1.45.1",
    "matplotlib==3.10.1",
    "plotly==6.1.2",
    "yfinance==0.2.63",
    "tabulate",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "line_profiler",
]

[project.urls]
"Homepage" = "https://github.com/Diljit22/qf"

[project.scripts]
quantfin-dashboard = "quantfin.cli:launch_dashboard"
quantfin-benchmark = "quantfin.cli:run_benchmark"
quantfin-backtest = "scripts.run_backtest:main"
quantfin-calibrate = "scripts.run_calib:main"
quantfin-dl-hist = "scripts.download_historical_data:main"

[tool.setuptools.packages.find]
where = ["src", "scripts"]

[tool.ruff]
line-length = 88
extend-exclude = ["demo"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "NPY"]
ignore = ["N803", "N806", "E731", "F841", "NPY002", "F401", "F403", "F405", "N999"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/quantfin --cov-report=term-missing"
testpaths = ["tests"]